[package]
name = "future-timed"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.70.0"
readme = "README.md"
repository = "https://github.com/matze/future-timed"
description = """
Future timing Instrumentation.

Instrumentation to record the busy and idle time taken by a
future as it is driven to completion.
"""
categories = ["development-tools::debugging", "development-tools::profiling"]
keywords = ["debugging", "async", "timing"]

[dependencies]
pin-project-lite = "0.2.16"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
unreachable_pub = "warn"

[lints.clippy]
cargo = "deny"
complexity = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[lints.rustdoc]
all = "deny"
